--- a/app/views/admin/challenges/_prizes.html.erb
+++ b/app/views/admin/challenges/_prizes.html.erb
@@ -5,7 +5,7 @@
         <div class="control-group">
           <label class="control-label">Place</label>
           <div class="controls">
-            <input type="text" name="admin_challenge[prizes][][place]" value='<%= prize.place %>4444'></input>
+            <input type="text" name="admin_challenge[prizes][][place]" value='<%= prize.place %>'></input>
           </div>
         </div>
         <div class="control-group">
@@ -31,8 +31,5 @@
     <% end %>
   </div>
 </div>
-
-<div class="controls">
-  <hr />
-  <a class='btn btn-info add-new-prize-set'>Add New Prize Set</a>
-</div>
+<hr />
+<a class='btn btn-info add-new-prize-set'>Add New Prize Set</a>
