--- a/app/views/admin/challenges/_assets.html.erb
+++ b/app/views/admin/challenges/_assets.html.erb
@@ -1,6 +1,6 @@
 <%= f.hidden_field :assets, value: @challenge.assets.join(',') %>
 <% @challenge.assets.each do |asset| %>
-  <div><p><%= asset %> <a class='btn btn-danger btn-mini delete-asset' data-filename='<%= asset %>'>delete</a></p></div>
+  <div><p><%= asset.filename %> <a class='btn btn-danger btn-mini delete-asset' data-filename='<%= asset %>'>delete</a></p></div>
 <% end %>
 <div id="uploader">
   <script>
@@ -13,7 +13,8 @@
         url: '<%= admin_challenges_assets_path %>',
         multipart_params: {
           "<%= request_forgery_protection_token %>": "<%= form_authenticity_token %>",
-          "<%= request.session_options[:key] %>": "<%= request.session_options[:id] %>"
+          "<%= request.session_options[:key] %>": "<%= request.session_options[:id] %>",
+          "challenge_id" : "<%= @challenge.challenge_id %>"
         },
         init: {
           FileUploaded: function(up, file, info) {
