--- a/app/views/admin/challenges/_challenge_info.html.erb
+++ b/app/views/admin/challenges/_challenge_info.html.erb
@@ -7,7 +7,7 @@
 <%= f.input :submission_details, :as => :text, input_html: { :class => 'ckeditor' } %>
 
 <div class="control-group">
-  <label class="control-label">Start and End Dates</label>
+  <label class="control-label">* Start and End Dates</label>
   <div class="controls">
     <div id="date-range">
       <div id="start-end-date">
