--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -2966,6 +2966,7 @@ table th[class*="span"],
 .nav-tabs {
   float: none !important;
   border-bottom: 1px solid #ddd;
+  font-size: 16px;
 }
 
 .nav-tabs > li {
