--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -48,7 +48,7 @@
                     <table class="type featured"><tr><td><%= number_to_currency(@platform_stats['featured_member_money'], :precision => 0) %></td></tr></table>
                 </div>
 
-                <p><a href="/members/Manish_Kumar">Manish</a> joined CloudSpokes in October and has since been extremely active in the community. He has racked up 5 wins and judged over 15 challenges (with many more in the queue). He has been a force to be reckoned with, and still considers himself a "newbie". Watch out for his name as he continues to climb our leaderboards as our March '13 Member of the Month</p>
+                <p><a href="/members/Chok68">Chok68</a> has been a CloudSpokes member for quite some time now and has quietly been one of our most consistent members. With a 92% submission rate and 20 total wins for over 11k chok68 isn't sneaking under the radar any more! With 2 big time first place wins in March, he was a clear choice for our April Member of the Month!</p>
             </div>
             <div class="span6">
                 <div class="title"><h1>LEADERBOARD</h1></div>
