--- a/app/views/accounts/payment_info.html.haml
+++ b/app/views/accounts/payment_info.html.haml
@@ -10,13 +10,13 @@
 
     %p
       %span In order for us to send your payments, you need to complete the appropriate tax form. If you are a
-      %strong US citizen
-      %span, please 
+      %strong US citizen,
+      %span please 
       - url = "#{ENV['DOCUSIGN_SIGNING_DOMAIN']}/sign/#{@member.id}/#{current_user.username}/#{ENV['DOCUSIGN_US_TAX_TEMPLATE']}/#{current_user.email}"
       = link_to "complete this W-9 tax form", url, target: "_blank"
       %span If you are 
-      %strong not a US citizen
-      %span , please 
+      %strong not a US citizen,
+      %span please 
       - url = "#{ENV['DOCUSIGN_SIGNING_DOMAIN']}/sign/#{@member.id}/#{current_user.username}/#{ENV['DOCUSIGN_INTL_TAX_TEMPLATE']}/#{current_user.email}"
       = link_to "complete this W-8BEN tax form", url, target: "_blank" 
       %span You only need to fill out this tax form once per year and we will keep it on file.</td>
