--- a/app/views/judging/judging_queue.html.erb
+++ b/app/views/judging/judging_queue.html.erb
@@ -31,9 +31,9 @@ function signup(challenge_id) {
                 <% @challenges.each do |c| %>
                 <div class="judge well well-large">
                     <h3><%= link_to c.name, challenge_path(c) %></h3>
+                    Scorecards Due: <%= c.review_date.to_s(:long) %><br/>
                     Technologies: <%= platform_and_technology_tag_display(c) %><br/>
-                    Ends: <%= c.end_date.strftime("%B %d, %Y at %H:%M %p") %><br/>
-                    Scorecards Due: <%= c.review_date.to_s(:long) %>
+                    Ends: <%= c.end_date.strftime("%B %d, %Y at %H:%M %p") %>
                     <a class="btn pull-right-top" onclick="addJudge('<%= c.challenge_id %>')"><span>SIGN UP TO JUDGE</span></a>
                     <div id="signup-<%= c.challenge_id %>" style="font-weight:bold"></div>
                 </div>
